<resources>
    <string name="app_name">FavoriteFilmApp</string>

    <!-- Set Span movie item section title -->
    <string name="span_movie_item_ratings">Ratings :</string>
    <string name="span_movie_item_language">Language :</string>
    <string name="span_movie_item_release_date">Release Date :</string>

    <!-- Set Span TV Show item section title -->
    <string name="span_tv_show_item_ratings">Ratings :</string>
    <string name="span_tv_show_item_language">Language :</string>
    <string name="span_tv_show_item_first_air_date">First Air Date :</string>

    <!-- Set Span detailed movie item section title -->
    <string name="span_movie_detail_rating">Rating :</string>
    <string name="span_movie_detail_runtime">Runtime :</string>
    <string name="span_movie_detail_runtime_minutes">minute(s)</string>

    <!-- Set Span detailed TV Show item section title -->
    <string name="span_tv_show_detail_rating">Rating :</string>
    <string name="span_tv_show_detail_runtime_episodes">Episodes Runtime :</string>
    <string name="span_tv_show_detail_runtime_episodes_minutes">minute(s)</string>

    <!-- Set values for Movie data placeholder in Fragment Favorite Movie -->
    <string name="movie_title_text">Movie Title</string>
    <string name="movie_ratings_text">Ratings</string>
    <string name="movie_release_date_text">Release Date</string>
    <string name="movie_language_text">Language</string>

    <!-- Set values for TV Show data placeholder in Fragment Favorite TV Show -->
    <string name="tv_show_name_text">TV Show Name</string>
    <string name="tv_show_ratings_text">Ratings</string>
    <string name="tv_show_first_air_date_text">First Air Date</string>
    <string name="tv_show_language_text">Language</string>

    <!-- Values untuk favorite item empty state data -->
    <string name="no_favorite_movie_data_shown">There is no favorite movie data to display</string>
    <string name="no_favorite_tv_show_data_shown">There is no favorite TV Show data to display</string>
    <string name="no_internet_connection">There is no internet connection</string>

    <!-- Values untuk favorite item navigation -->
    <string name="favorite_movie">Favorite Movie</string>
    <string name="favorite_tv_show">Favorite TV Show</string>

    <!-- Set Detailed Movie section value placeholder -->
    <string name="detailed_movie_rating_text">Detailed Movie Rating Text</string>
    <string name="detailed_movie_status_text">Detailed Movie Status Text</string>
    <string name="detailed_movie_tagline_text">Detailed Movie Tagline Text</string>
    <string name="detailed_movie_runtime_text">Detailed Movie Runtime Text</string>
    <string name="detailed_movie_title_text">Detailed Movie Title Text</string>
    <string name="detailed_movie_overview_text">Detailed Overview</string>
    <string name="detailed_movie_release_date_text">yyyy-MM-dd</string>

    <!-- Set Detailed Movie section title -->
    <string name="detailed_movie_overview_title">Overview</string>
    <string name="detailed_movie_release_date_title">Release Date</string>
    <string name="detailed_movie_original_language_text">Original Language Text</string>
    <string name="detailed_movie_original_language_title">Original Language</string>

    <!-- Set Detailed TV Show section title -->
    <string name="detailed_tv_show_overview_title">Overview</string>
    <string name="detailed_tv_show_first_air_date_title">First Air Date</string>
    <string name="detailed_tv_show_original_language_text">Original Language Text</string>
    <string name="detailed_tv_show_original_language_title">Original Language</string>

    <!-- Placeholder for unknown values in detail movies -->
    <string name="detailed_movie_unknown_title">Title Unknown</string>
    <string name="detailed_movie_unknown_runtime">Runtime Unknown</string>
    <string name="detailed_movie_default_value_ratings">0</string>
    <string name="detailed_movie_default_value_ratings_vote">0</string>
    <string name="detailed_movie_unknown_original_language">Original Language Unknown</string>
    <string name="detailed_movie_unknown_release_date">Release Date Unknown</string>
    <string name="detailed_movie_unknown_overview">Overview Unknown</string>

    <!-- Placeholder for unknown values in detail TV Show -->
    <string name="detailed_tv_show_unknown_name">Name Unknown</string>
    <string name="detailed_tv_show_unknown_episodes_runtime">Episodes Runtime Unknown</string>
    <string name="detailed_tv_show_default_value_ratings">0</string>
    <string name="detailed_tv_show_default_value_ratings_vote">0</string>
    <string name="detailed_tv_show_unknown_original_language">Original Language Unknown</string>
    <string name="detailed_tv_show_unknown_first_air_date">First Air Date Unknown</string>
    <string name="detailed_tv_show_unknown_overview">Overview Unknown</string>

    <!-- String untuk snackbar message -->
    <string name="insert_movie_favorite_snackbar">Insert movie item into database</string>
    <string name="remove_movie_favorite_snackbar">Remove movie item from database</string>
    <string name="insert_tv_show_favorite_snackbar">Insert TV show item into database</string>
    <string name="remove_tv_show_favorite_snackbar">Remove TV show item from database</string>

    <!-- String untuk content description -->
    <string name="poster_image_description">Poster Image</string>

    <!-- String for marked as favorite -->
    <string name="mark_as_favorite">Marked as Favorite</string>
</resources>
