<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailed_info_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailActivity">

    <!-- Constraint untuk informasi dasar -->

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/detailed_item_poster_image"
        style="@style/CirclePosterImage"
        android:contentDescription="@string/poster_image_description"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/inner_view_margin"
        app:layout_constraintBottom_toBottomOf="@id/detailed_third_info_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/detailed_first_info_text"
        tools:src="@drawable/no_image_available"/>

    <TextView
        android:id="@+id/detailed_first_info_text"
        style="@style/DetailedText"
        android:layout_marginLeft="@dimen/inner_view_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginRight="@dimen/inner_view_margin"
        android:textSize="@dimen/item_detailed_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/detailed_second_info_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/detailed_item_poster_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1"
        tools:text="@string/detailed_movie_title_text"/>

    <TextView
        android:id="@+id/detailed_second_info_text"
        style="@style/DetailedText"
        android:layout_marginLeft="@dimen/inner_view_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginRight="@dimen/inner_view_margin"
        app:layout_constraintBottom_toTopOf="@id/detailed_third_info_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/detailed_item_poster_image"
        app:layout_constraintTop_toBottomOf="@id/detailed_first_info_text"
        app:layout_constraintVertical_weight="1"
        tools:text="@string/detailed_movie_rating_text" />

    <TextView
        android:id="@+id/detailed_third_info_text"
        style="@style/DetailedText"
        android:layout_marginLeft="@dimen/inner_view_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginRight="@dimen/inner_view_margin"
        android:layout_marginBottom="@dimen/inner_view_margin"
        app:layout_constraintBottom_toTopOf="@id/detailed_fourth_info_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/detailed_item_poster_image"
        app:layout_constraintTop_toBottomOf="@id/detailed_second_info_text"
        app:layout_constraintVertical_weight="1"
        tools:text="@string/detailed_movie_runtime_text" />

    <!-- Constraint untuk informasi lebih lanjut -->

    <TextView
        android:id="@+id/detailed_fourth_info_title"
        style="@style/DetailedSectionTitleText"
        android:layout_marginStart="@dimen/inner_view_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginEnd="@dimen/inner_view_margin"
        app:layout_constraintBottom_toTopOf="@id/detailed_fourth_info_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailed_third_info_text"
        tools:text="@string/detailed_movie_original_language_title" />


    <TextView
        android:id="@+id/detailed_fourth_info_text"
        style="@style/DetailedSectionContentText"
        android:layout_marginStart="@dimen/inner_view_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginEnd="@dimen/inner_view_margin"
        app:layout_constraintBottom_toTopOf="@id/detailed_fifth_info_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailed_fourth_info_title"
        tools:text="@string/detailed_movie_original_language_text" />

    <TextView
        android:id="@+id/detailed_fifth_info_title"
        style="@style/DetailedSectionTitleText"
        android:layout_marginStart="@dimen/inner_view_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginEnd="@dimen/inner_view_margin"
        app:layout_constraintBottom_toTopOf="@id/detailed_fifth_info_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailed_fourth_info_text"
        tools:text="@string/detailed_movie_release_date_title"/>

    <TextView
        android:id="@+id/detailed_fifth_info_text"
        style="@style/DetailedSectionContentText"
        android:layout_marginStart="@dimen/inner_view_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginEnd="@dimen/inner_view_margin"
        app:layout_constraintBottom_toTopOf="@id/detailed_sixth_info_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailed_fifth_info_title"
        tools:text="@string/detailed_movie_release_date_text" />

    <TextView
        android:id="@+id/detailed_sixth_info_title"
        style="@style/DetailedSectionTitleText"
        android:layout_marginStart="@dimen/inner_view_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginEnd="@dimen/inner_view_margin"
        app:layout_constraintBottom_toTopOf="@id/detailed_sixth_info_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailed_fifth_info_text"
        tools:text="@string/detailed_movie_overview_title"/>

    <TextView
        android:id="@+id/detailed_sixth_info_text"
        style="@style/DetailedSectionContentText"
        android:layout_marginStart="@dimen/inner_view_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginEnd="@dimen/inner_view_margin"
        android:layout_marginBottom="@dimen/text_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailed_sixth_info_title"
        tools:text="@string/detailed_movie_overview_text" />

</android.support.constraint.ConstraintLayout>