<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:background="@drawable/border"
    android:foreground="?android:attr/selectableItemBackground">

    <ImageView
        android:id="@+id/poster_image"
        style="@style/PosterImage"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/inner_view_margin"
        android:layout_marginEnd="@dimen/inner_view_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/no_image_available" />

    <TextView
        android:id="@+id/movie_title_text"
        style="@style/ItemText"
        android:layout_marginStart="@dimen/inner_view_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginEnd="@dimen/inner_view_margin"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/item_section_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/movie_ratings_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/poster_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1"
        tools:text="@string/movie_title_text" />

    <TextView
        android:id="@+id/movie_ratings_text"
        style="@style/ItemText"
        android:layout_marginStart="@dimen/inner_view_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginEnd="@dimen/inner_view_margin"
        app:layout_constraintBottom_toTopOf="@+id/movie_release_date_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/poster_image"
        app:layout_constraintTop_toBottomOf="@+id/movie_title_text"
        app:layout_constraintVertical_weight="1"
        tools:text="@string/movie_ratings_text" />

    <TextView
        android:id="@+id/movie_release_date_text"
        style="@style/ItemText"
        android:layout_marginStart="@dimen/inner_view_margin"
        android:layout_marginEnd="@dimen/inner_view_margin"
        app:layout_constraintBottom_toTopOf="@+id/movie_language_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/poster_image"
        app:layout_constraintTop_toBottomOf="@+id/movie_ratings_text"
        app:layout_constraintVertical_weight="1"
        tools:text="@string/movie_release_date_text" />

    <TextView
        android:id="@+id/movie_language_text"
        style="@style/ItemText"
        android:layout_marginStart="@dimen/inner_view_margin"
        android:layout_marginEnd="@dimen/inner_view_margin"
        android:layout_marginBottom="@dimen/text_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/poster_image"
        app:layout_constraintTop_toBottomOf="@+id/movie_release_date_text"
        app:layout_constraintVertical_weight="1"
        tools:text="@string/movie_language_text" />

</android.support.constraint.ConstraintLayout>